Fix for cards wrapping

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -96,7 +96,7 @@ button:active {
 }
 
 .column h1,
-.column input {
+.column h1 + input {
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -124,6 +124,7 @@ button:active {
     text-overflow: ellipsis;
     user-select: none;
     -webkit-user-select: none;
+    white-space: normal;
     width: 100%;
     z-index: 5;
 }
